--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     position: absolute;
     max-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 #viewer {
     /* margin-left: 250px; */
@@ -43,23 +45,14 @@ body {
 }
 
 .logoContainer {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
+    padding: 1.5rem;
     background-color: #008de4;
-    border-bottom: #008de4 2px solid;
+    text-align: center;
 }
 
 .logo {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
-    height: 100px;
-    background-color: #008de4;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 #toolbar {
@@ -67,4 +60,22 @@ body {
     right:0;
     top:0;
     z-index: 10;
+}
+
+.sidebarFooter {
+    position: absolute;
+    height: 4rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 1rem;
+    background-color: #1b1b1b;
+    color: #ffffff;
+    text-align: center;
+}
+#sidebar-toggle-button {
+    cursor: pointer;
+}
+#sidebar-toggle-button ~ div {
+    cursor: pointer;
 }
