--- a/main.css
+++ b/main.css
@@ -10,13 +10,21 @@ body {
     /* margin-left: 250px; */
     position: relative;
     background-color: #343131;
+    width: 100%; 
+    height: 100%;
 }
 .annotation {
     border: #008de4 2px solid;
     border-radius: 50%;
     background-color: #ffffff;
     opacity: 0.0;
+    cursor: pointer;
 }
+
+.annotation-link { 
+    background-color: aqua;
+}
+
 .annotation:hover {
     opacity: 0.7;
 }
@@ -44,7 +52,7 @@ body {
     width: 100%;
 }
 
-.logoContainer {
+.logo-container {
     padding: 1.5rem;
     background-color: #008de4;
     text-align: center;
@@ -62,7 +70,7 @@ body {
     z-index: 10;
 }
 
-.sidebarFooter {
+.sidebar-footer {
     position: absolute;
     height: 4rem;
     bottom: 0;
@@ -78,4 +86,69 @@ body {
 }
 #sidebar-toggle-button ~ div {
     cursor: pointer;
+}
+
+.annotation-toggle{
+    display: none;
+}
+
+.infobox{
+    visibility: hidden;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    min-width: 400px;
+    z-index: 1;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    -webkit-transition: visibility 0s .4s, opacity .4s 0s;
+            transition: visibility 0s .4s, opacity .4s 0s;
+}
+:checked + .infobox{
+    visibility: visible;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transition: visibility 0s 0s, opacity .4s .1s;
+            transition: visibility 0s 0s, opacity .4s .1s;
+}
+
+h1{
+    font-weight: 300;
+    width: 100%;
+    background-color: rgb(64,81,181);
+    color: rgb(255,255,255);
+    padding: 20px 60px;
+}
+h2{
+    font-weight: 400;
+    margin-top: 0;
+}
+.annotation-body{
+    background-color: rgb(255,255,255);
+    border-radius: 5px;
+    overflow: hidden;
+    padding: 10px 20px;
+}
+#annotation-content{
+    font-weight: bold;
+    overflow-y: auto;
+    max-height: 24rem;
+}
+
+.annotation-button {
+    background-color: #008de4;
+    border-radius: 10px;
+    color: #ffffff;
+    padding: 10px;
+    size: 1.5rem;
+    float: right;
+    cursor: pointer;
+}
+
+.annotation-button:hover {
+    background-color: #006fb4;
 }
