--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ body {
 }
 
 .annotation:hover {
-    opacity: 0.7;
+    opacity: 0.4;
 }
 .sidebar {
     opacity: 0.95;
@@ -48,6 +48,8 @@ body {
 }
 .toolbar {
     transition: margin-left 0.5s;
+    background-color: rgba(0, 0, 0, 0.6) !important;
+    height: 40px;
 }
 .title {
     font-size: 1.5em;
