--- a/main.css
+++ b/main.css
@@ -6,27 +6,52 @@ body {
     width: 100%;
     height: 100%;
 }
+
 .sidebar-item {
     margin-top: 0.5rem;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-evenly;
+    color: #fff;
+    opacity: 1;
+    font-size: 1.5rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+}
+
+.sidebar-option {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    padding-top: 0.25rem;
+    padding-bottom: 0.35rem;
+
+}
+
+.sidebar-item:hover {
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .language-item {
     cursor: pointer;
 }
 
-#lang-select {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: space-evenly;
+#lang-select {}
+
+#annotation-box {
+    width: 95%;
+    height: 10rem;
 }
+
 
 #viewer {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #343131;
-    width: 100%; 
+    width: 100%;
     height: 100%;
 }
 
@@ -38,7 +63,7 @@ body {
     cursor: pointer;
 }
 
-.annotation-link { 
+.annotation-link {
     background-color: aqua;
 }
 
@@ -87,8 +112,8 @@ body {
 
 #toolbar {
     position: absolute !important;
-    right:0;
-    top:0;
+    right: 0;
+    top: 0;
     z-index: 10;
 }
 
@@ -104,7 +129,8 @@ body {
     text-align: center;
 }
 
-#sidebar-toggle-button ~ div, #sidebar-toggle-button {
+#sidebar-toggle-button~div,
+#sidebar-toggle-button {
     cursor: pointer;
 }
 
@@ -116,16 +142,21 @@ body {
     align-self: stretch;
 }
 
+.sidebar-link-container {
+    overflow-y: auto;
+    height: 65%;
+}
+
 #annotation-body {
     visibility: hidden;
     opacity: 0;
     filter: alpha(opacity=0);
     -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     z-index: 1;
     -webkit-transition: visibility 0s .4s, opacity .4s 0s;
-            transition: visibility 0s .4s, opacity .4s 0s;
+    transition: visibility 0s .4s, opacity .4s 0s;
     /*end toggle css*/
     max-height: 80%;
     position: fixed;
@@ -133,25 +164,26 @@ body {
     left: 50%;
     min-width: 200px;
     max-width: 85%;
-    background-color: rgb(255,255,255);
+    background-color: rgb(255, 255, 255);
     border-radius: 5px;
     overflow: hidden;
-    padding: 10px 20px;box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    padding: 10px 20px;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
-:checked + #annotation-body{
+:checked+#annotation-body {
     visibility: visible;
     opacity: 1;
     filter: alpha(opacity=100);
     -webkit-transition: visibility 0s 0s, opacity .4s .1s;
-            transition: visibility 0s 0s, opacity .4s .1s;
+    transition: visibility 0s 0s, opacity .4s .1s;
 }
 
 h1 {
     font-weight: 300;
     width: 100%;
-    background-color: rgb(64,81,181);
-    color: rgb(255,255,255);
+    background-color: rgb(64, 81, 181);
+    color: rgb(255, 255, 255);
     padding: 20px 60px;
 }
 
@@ -166,7 +198,7 @@ h2 {
     }
 }
 
-#annotation-content{
+#annotation-content {
     font-weight: bold;
     overflow-y: auto;
     overflow-x: hidden;
